--- a/Client/package.json
+++ b/Client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "firebase": "^11.6.0",
+    "flowbite": "^3.1.2",
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
